--- a/AX6.config
+++ b/AX6.config
@@ -48,55 +48,73 @@ CONFIG_PACKAGE_6to4=y
 # CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
 
 #插件区
-# CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 
-#CONFIG_PACKAGE_luci-app-adguardhome=y
+#通用即插即用UPnP（端口自动转发）
+#CONFIG_PACKAGE_luci-app-upnp=y
+#文件传输（可web安装ipk包）
+CONFIG_PACKAGE_luci-app-arpbind=y
+#添加防火墙
+CONFIG_PACKAGE_luci-app-firewall=y
+
+ #固件更新升级相关
+CONFIG_PACKAGE_luci-app-attendedsysupgrade=y
+
+CONFIG_PACKAGE_ luci-app-haproxy-tcp=y
 
 # CONFIG_PACKAGE_luci-app-advanced is not set
-# CONFIG_PACKAGE_luci-app-filetransfer is not set
+CONFIG_PACKAGE_luci-app-filetransfer=y
 
-
+ #简单MESH(可有线+无线回程)
 CONFIG_PACKAGE_luci-app-easymesh=y
 
-CONFIG_PACKAGE_luci-app-frpc=y
-CONFIG_PACKAGE_luci-app-frps=y
+#内网穿透Frp客户端
+#CONFIG_PACKAGE_luci-app-frpc=y
+#内网穿透Frp服务端
+#CONFIG_PACKAGE_luci-app-frps=y
 
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 
 
 # CONFIG_PACKAGE_luci-app-aliyundrive-webdav is not set
-
+#京东签到服务
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
+#ddns
 CONFIG_PACKAGE_luci-app-ddns=y
+#分流助手
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
+#分布式AP管理程序
 #CONFIG_PACKAGE_luci-app-dawn=y
+#N2N内网穿透 N2N v2 VPN服务
 CONFIG_PACKAGE_luci-app-n2n_v2=y
+
+#ZeroTier内网穿透
+CONFIG_PACKAGE_luci-app-zerotier=y
 
 CONFIG_PACKAGE_luci-app-netdata=y
 
+#NTP时间同步服务器
 CONFIG_PACKAGE_luci-app-ntpc=y
+#DNSFilter基于DNS的广告过滤
 CONFIG_PACKAGE_luci-app-dnsfilter=y
+#内网穿透nps
 CONFIG_PACKAGE_luci-app-nps=y
 
 #CONFIG_PACKAGE_luci-app-oaf=y
 
-CONFIG_PACKAGE_luci-app-openclash=y
+#CONFIG_PACKAGE_luci-app-openclash=y
 
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
 
 CONFIG_PACKAGE_luci-app-pppoe-relay=y
 
-CONFIG_PACKAGE_luci-app-pptp-server=y
-
+#全能推送
 CONFIG_PACKAGE_luci-app-pushbot=y
 
 # CONFIG_PACKAGE_luci-app-qos is not set
 
-CONFIG_PACKAGE_luci-app-smartdns=y
+#CONFIG_PACKAGE_luci-app-smartdns=y
 
 # CONFIG_PACKAGE_luci-app-eqos is not set
 # CONFIG_PACKAGE_luci-app-sqm is not set
@@ -104,29 +122,32 @@ CONFIG_PACKAGE_luci-app-smartdns=y
 # CONFIG_PACKAGE_luci-theme-argon is not set
 # CONFIG_PACKAGE_luci-app-argon-config is not set
 
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
-
+#多拨虚拟网卡（原macvlan）
 CONFIG_PACKAGE_luci-app-syncdial=y
 
+#网页终端命令行
 CONFIG_PACKAGE_luci-app-ttyd=y
 
+#udpxy做组播服务器
 CONFIG_PACKAGE_luci-app-udpxy=y
 
 CONFIG_PACKAGE_luci-app-uhttpd=y
 
-# CONFIG_PACKAGE_luci-app-unblockmusic is not set
-# CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go is not set
+ #解锁网易云灰色歌曲3合1新版本
+CONFIG_PACKAGE_luci-app-unblockmusic=y
+CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go=y
 
+ #UU网游加速器
 CONFIG_PACKAGE_luci-app-uugamebooster=y
 
-CONFIG_PACKAGE_luci-app-vlmcsd=y
+#KMS服务器设置
+#CONFIG_PACKAGE_luci-app-vlmcsd=y
 
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
 
+#WiFi 计划
 CONFIG_PACKAGE_luci-app-wifischedule=y
+
 
 CONFIG_PACKAGE_luci-app-wireguard=y
 
