--- a/AX6.config
+++ b/AX6.config
@@ -58,8 +58,7 @@ CONFIG_PACKAGE_luci-app-firewall=y
 
  #固件更新升级相关
 CONFIG_PACKAGE_luci-app-attendedsysupgrade=y
-
-# CONFIG_PACKAGE_luci-app-advanced is not set
+CONFIG_PACKAGE_ luci-app-haproxy-tcp=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 
  #简单MESH(可有线+无线回程)
