--- a/AX6.config
+++ b/AX6.config
@@ -74,7 +74,7 @@ CONFIG_PACKAGE_luci-app-guest-wifi=y
 
 # CONFIG_PACKAGE_luci-app-aliyundrive-webdav is not set
 #京东签到服务
-CONFIG_PACKAGE_luci-app-jd-dailybonus=y
+#CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 #ddns
 CONFIG_PACKAGE_luci-app-ddns=y
 #分流助手
